--- a/Editor/unittests/all.html
+++ b/Editor/unittests/all.html
@@ -3,13 +3,13 @@
 <head>
     <title>Rich text commands unit test suite</title>
     <!--Rich text dependencies and rich text script-->
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="dependencies/jquery-current.js"></script>
     <script type="text/javascript" src="../../Release/v0.1/Rangy.debug.js"></script>
     <script type="text/javascript" src="../../Release/v0.1/Arte.debug.js"></script>
 
     <!--Test Infrastructure-->
-    <link href="Qunit/qunit-1.12.0.css" rel="stylesheet" type="text/css" />
-    <script src="Qunit/qunit-1.12.0.js" type="text/javascript"></script>
+    <link href="dependencies/Qunit/qunit-1.12.0.css" rel="stylesheet" type="text/css" />
+    <script src="dependencies/Qunit/qunit-1.12.0.js" type="text/javascript"></script>
     <script type="text/javascript" src="unitTestsHelper.js"></script>
 
     <!-- Add the test element id and selector-->
