Simple editor sample

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         <h1>
 <a name="artejs" class="anchor" href="#artejs"><span class="octicon octicon-link"></span></a>ArteJS</h1>
 
-<p>A powerful, extensible, flexible, cross-browser rich text editor</p>
+          <p>A powerful, extensible, flexible, cross-browser rich text editor</p>
+          
+          <ul>
+              <li>
+                  <a href="Pages/SimpleEditor.htm">Simple Editor</a>
+              </li>
+          </ul>
       </section>
     </div>
 
