Added another editor example.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <ul>
               <li>
                   <a href="Pages/SimpleEditor.htm">Simple Editor</a>
+                  <a href="Pages/ToolbarUsingDataAttributes.htm.htm">Toolbar using the data attribute</a>
               </li>
           </ul>
       </section>
