fixed a file name casing issue

--- a/CompleteToolbarWithTwitterBootstrap/Toolbar.html
+++ b/CompleteToolbarWithTwitterBootstrap/Toolbar.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	    <title>Rich text editor</title>
-	    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
+	    <link rel="stylesheet" href="BootStrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="demo.css"/>
         <link rel="stylesheet" href="arte.css" />
 	    <link rel="stylesheet" href="toolbar.css" />
