--- a/Toolbar/Demo.html
+++ b/Toolbar/Demo.html
@@ -22,7 +22,6 @@
         <div id="text_editor">
             <div class="toolbar"></div>
             <div class="editor"></div>
-            <div class="editor"></div>
         </div>
 
         <div id="htmlContent"></div>
@@ -48,9 +47,8 @@
 
 
         <script type="text/javascript">
-
-            $(".commandAttrType").on("change", function(e)
-            {
+            $.Arte.Toolbar.configuration.buttonStateClass.selected = "btn-primary";
+            $(".commandAttrType").on("change", function (e) {
                 var commandAttrType = $(this).val();
                 $.Arte.configuration.commandAttrType = commandAttrType;
                 $.Arte.Toolbar.configuration.commandAttrType = commandAttrType;
@@ -60,7 +58,7 @@
             {
                 $.Arte.configuration.allowOpsOnCollapsedSelection = false;
                 // List of buttons 
-                var buttons = ["bold", "italic", "underLine", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
+                var buttons = ["bold", "italic", "underline", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
                     "subscript", "superscript", "unorderedList", "orderedList", "undo", "redo", "fontSize", "fontFamily", "color", "backgroundColor", "insertLink"
                 ];
 
