A couple of minor toolbar changes and updated scripts

--- a/CompleteToolbar/Toolbar.html
+++ b/CompleteToolbar/Toolbar.html
@@ -22,7 +22,7 @@
             <script type="text/javascript">
                 $(function () {
                     // List of buttons to show on the toolbar 
-                    var buttons = ["bold", "italic", "underLine", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
+                    var buttons = ["bold", "italic", "underline", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
                         "subscript", "superscript", "unorderedList", "orderedList", "undo", "redo", "fontSize", "fontFamily", "color", "backgroundColor", "insertLink"
                     ];
 
