--- a/CompleteToolbarWithTwitterBootstrap/Toolbar.html
+++ b/CompleteToolbarWithTwitterBootstrap/Toolbar.html
@@ -23,14 +23,16 @@
             <script type="text/javascript" src="../Dependencies/toolbar.debug.js"></script>
 
             <script type="text/javascript">
-                $(function()
-                {
+                $(function () {
                     // List of buttons 
-                    var buttons = ["bold", "italic", "underLine", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
+                    var buttons = ["bold", "italic", "underline", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
                         "subscript", "superscript", "unorderedList", "orderedList", "undo", "redo", "fontSize", "fontFamily", "color", "backgroundColor", "insertLink"
                     ];
 
+                    $.Arte.Toolbar.configuration.buttonStateClass.selected = "btn-primary";
+
                     $(".editor").Arte();
+
 
                     $(".toolbar").ArteToolbar({
                         buttons: buttons
