--- a/CompleteToolbarWithTwitterBootstrap/Toolbar.html
+++ b/CompleteToolbarWithTwitterBootstrap/Toolbar.html
@@ -1,58 +1,59 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
-	<head>
-	    <title>Rich text editor</title>
-	    <link rel="stylesheet" href="BootStrap/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="demo.css"/>
-        <link rel="stylesheet" href="arte.css" />
-	    <link rel="stylesheet" href="toolbar.css" />
-        <link href="../stylesheets/stylesheet.css" rel="stylesheet" type="text/css" />
-        <link href="../stylesheets/page.css" rel="stylesheet" type="text/css"/>
-	</head>
-    <body>
-        <div class="header">Rich text editor with a toolbar that has twitter bootstrap styles </div>
+<head>
+    <title>Rich text editor</title>
+    <link rel="stylesheet" href="../CSS/3rdParty/Bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="arte.css" />
+    <link rel="stylesheet" href="toolbar.css" />
+    <link href="../CSS/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link href="../CSS/page.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+    <div id="demo">
+        <div class="toolbar"></div>
+        <div class="editor"></div>
 
-        <div id="demo">
-            <div class="toolbar"></div>
-            <div class="editor"></div>
-                
-            <!--Included the Rich text files-->
-            <script type="text/javascript" src="../Dependencies/jquery-1.9.2.js"></script>
-            <script type="text/javascript" src="../Dependencies/rangy.debug.js"></script>
-            <script type="text/javascript" src="../Dependencies/arte.debug.js"></script>
-            <script type="text/javascript" src="../Dependencies/toolbar.debug.js"></script>
+        <!--Included the Rich text files-->
+        <!--Dependencies-->
+        <script src="../Scripts/3rdParty/jQuery/jquery-1.9.1.js"></script>
 
-            <script type="text/javascript">
-                $(function () {
-                    // List of buttons 
-                    var buttons = ["bold", "italic", "underline", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
-                        "subscript", "superscript", "unorderedList", "orderedList", "undo", "redo", "fontSize", "fontFamily", "color", "backgroundColor", "insertLink"
-                    ];
+        <!-- Include the Arte scripts-->
+        <script src="../Scripts/ArteJS/rangy.debug.js"></script>
+        <script src="../Scripts/ArteJS/arte.debug.js"></script>
+        <script src="../Scripts/ArteJS/toolbar.debug.js"></script>
 
-                    $.extend(true, $.Arte.Toolbar.configuration, {
-                        classes: {
-                            "button":
-                            {
-                                selected: "btn-primary"
-                            },
-                            "dialog":
-                            {
-                                "insertLink": {
-                                    "label": "add-on",
-                                    "input": "input-medium"
-                                }
+        <script type="text/javascript">
+            $(function () {
+                // List of buttons 
+                var buttons = ["bold", "italic", "underline", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
+                    "subscript", "superscript", "unorderedList", "orderedList", "undo", "redo", "fontSize", "fontFamily", "color", "backgroundColor", "insertLink"
+                ];
+
+                $.extend(true, $.Arte.Toolbar.configuration, {
+                    classes: {
+                        "button":
+                        {
+                            selected: "btn-primary"
+                        },
+                        "dialog":
+                        {
+                            "insertLink": {
+                                "label": "add-on",
+                                "input": "input-medium"
                             }
                         }
-                    });
-
-                    $(".editor").Arte();
-
-
-                    $(".toolbar").ArteToolbar({
-                        buttons: buttons
-                    });
+                    }
                 });
-            </script>
-        </div>
-    </body>
+
+                $(".editor").Arte();
+
+
+                $(".toolbar").ArteToolbar({
+                    buttons: buttons
+                });
+            });
+        </script>
+    </div>
+</body>
 </html>
