--- a/CompleteToolbarWithTwitterBootstrap/Toolbar.html
+++ b/CompleteToolbarWithTwitterBootstrap/Toolbar.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="demo.css" />
     <link rel="stylesheet" href="arte.css" />
     <link rel="stylesheet" href="toolbar.css" />
-    <link href="../CSS/stylesheet.css" rel="stylesheet" type="text/css" />
-    <link href="../CSS/page.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="../CSS/stylesheet.css"/>
+    <link rel="stylesheet" href="../CSS/page.css"/>
 </head>
 <body>
     <div id="demo">
