--- a/CompleteToolbar/Toolbar.html
+++ b/CompleteToolbar/Toolbar.html
@@ -4,8 +4,8 @@
     <title>Rich text editor</title>
     <link rel="stylesheet" href="demo.css" />
     <link rel="stylesheet" href="toolbar.css" />
-    <link href="../CSS/stylesheet.css" rel="stylesheet" type="text/css" />
-    <link href="../CSS/page.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="../CSS/stylesheet.css"/>
+    <link rel="stylesheet" href="../CSS/page.css" />
 </head>
 <body>
     <div id="demo">
