Fixed casing issue in the script paths

--- a/UnobtrusiveToolbar/Toolbar.html
+++ b/UnobtrusiveToolbar/Toolbar.html
@@ -37,14 +37,14 @@
 
 
         <!--Dependencies-->
-        <script src="../Scripts/3rdParty/jQuery/jquery-1.9.1.js" type="text/javascript"></script>
+        <script src="../Scripts/3rdParty/JQuery/jquery-1.9.1.js"></script>
 
         <!-- Include the Arte scripts-->
-        <script src="../Scripts/ArteJS/rangy.debug.js" type="text/javascript"></script>
-        <script src="../Scripts/ArteJS/arte.debug.js" type="text/javascript"></script>
+        <script src="../Scripts/ArteJS/rangy.debug.js"></script>
+        <script src="../Scripts/ArteJS/arte.debug.js"></script>
         <script src="toolbar.js"></script>
     </div>
 
-    <script src="../javascripts/pages.js" type="text/javascript"></script>
+    <script src="../Scripts/pages.js" type="text/javascript"></script>
 </body>
 </html>
