--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/stylesheet.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/page.css" />
     <link rel="stylesheet" type="text/css" href="CSS/3rdParty/Tocify/jquery.tocify.css" />
-    <link rel="stylesheet" type="text/css" href="CSS/3rdParty/Bootstrap/bootstrap.responsive.css" />
+    <link rel="stylesheet" type="text/css" href="CSS/3rdParty/Bootstrap/bootstrap-responsive.css" />
 
     <link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
     <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
@@ -168,8 +168,8 @@ $(".editor").fontSize(10); // Change fontsize fo selected text to 10px
         </footer>
     </div>
 
-    <script type="text/javascript" src="Scripts/3rdParty/jQuery/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="Scripts/3rdParty/jQuery/jquery-ui-1.10.3.custom.min.js"></script>
+    <script type="text/javascript" src="Scripts/3rdParty/JQuery/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="Scripts/3rdParty/JQuery/jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="Scripts/3rdParty/Tocify/jquery.tocify.min.js"></script>
 
     <script>
