--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
 
         <section id="main_content" class="inner">
             <h1>Overview</h1>
-            <p>A powerful, extensible, flexible, cross-browser rich text editor</p>
-            ArteJS is an integral part of VistaPrint's DIY product design experience that allows adding rich text to a document that eventually gets printed. This imposes a stringent requirement on the output of the rich text editor. Most of the rich text editors we evaluated either did not allow any control on the resultant markup or were simply buggy/incomplete.
-            <br />
-
-            In addition, ArteJS provide many other features that are expected of a modern rich text editor library.
+            <p>A powerful, extensible, flexible, cross-browser rich text editor.</p>
+            <p>ArteJS is an integral part of VistaPrint's DIY product design experience that allows adding rich text to a document that eventually gets printed. This imposes a stringent requirement on the output of the rich text editor. Most of the rich text editors we evaluated either did not allow any control on the resultant markup or were simply buggy/incomplete.</p>
+            <p>In addition, ArteJS provide many other features that are expected of a modern rich text editor library.</p>
             <ul>
                 <li>A simple and intuitive jQuery like API.
                     <br />
