--- a/Toolbar/Demo.html
+++ b/Toolbar/Demo.html
@@ -58,7 +58,7 @@
                 $.Arte.configuration.allowOpsOnCollapsedSelection = false;
                 // List of buttons 
                 var buttons = ["bold", "italic", "underline", "blockquote", "textAlignLeft", "textAlignCenter", "textAlignRight", "h1", "h2", "h3", "h4", "h5", "h6",
-                    "subscript", "superscript", "unorderedList", "orderedList", "undo", "redo", "fontSize", "fontFamily", "color", "backgroundColor", "insertLink"
+                    "subscript", "superscript", "unorderedList", "orderedList", "undo", "redo", "fontSize", "fontFamily", "color", "backgroundColor", "insertLink", "insertImage"
                 ];
 
                 $(".editor").Arte();
